# info-II

Desafio_2/: INFORME DESAFIO 2.docx  Informe final.docx  ~$FORME DESAFIO 2.docx  ~$forme final.docx
Desafio_2/Desafio_2/: alojamiento.h  main.cpp
Desafio_2/Desafio_2UDESTAY/: .gitignore  Desafio_2UDESTAY.pro  alojamiento.cpp  alojamiento.h  anfitrion.cpp  anfitrion.h  huesped.cpp  huesped.h  main.cpp  reservacion.cpp  reservacion.h
Laboratorio 1/: Comandos Git.txt
Laboratorio 1/ejercicio_1/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_10/ejercicio_10/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_11/ejercicio_11/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_12/ejercicio_12/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_13/ejercicio_13/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_14/ejercicio_14/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_15/ejercicio_15/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_16/ejercicio_16/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_17/ejercicio_17/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_18/ejercicio_18/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_19/ejercicio_19/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_2/ejercicio_2/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_20/ejercicio_20/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_21/ejercicio_21/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_22/ejercicio_22/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_23/ejercicio_23/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_24/ejercicio_24/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_3/ejercicio_3/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_4/ejercicio_4/: main.cpp
Laboratorio 1/ejercicio_5/ejercicio_5/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_6/ejercicio_6/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_7/ejercicio_7/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_8/ejercicio_8/: CMakeLists.txt  main.cpp
Laboratorio 1/ejercicio_9/ejercicio_9/: CMakeLists.txt  main.cpp
Laboratorio 1/problema_1/problema_1/: main.cpp
Laboratorio_2/Ejercicio_1/: CMakeLists.txt  main.cpp
Laboratorio_2/Ejercicio_4/: ejercicio_4.txt
Laboratorio_2/Problema_3/problema_3/: CMakeLists.txt  main.cpp
Laboratorio_2/problema1/problema_1/: Arduino.txt  CMakeLists.txt  main.cpp
Laboratorio_2/problema_2/problema_2/: Arduino.txt  CMakeLists.txt  main.cpp
Laboratorio_2/problema_4/ejercicio_4/: CMakeLists.txt  main.cpp
desafio_1/: main.cpp
desafio_1/practicas_bit/Cargar_imagen/: main.cpp
desafio_1/practicas_bit/Nueva carpeta/rotaciones/: CMakeLists.txt  main.cpp
desafio_1/practicas_bit/Xor_arreglo/: CMakeLists.txt  main.cpp
desafio_1/practicas_bit/crea_sum_dezp/: main.cpp
desafio_1/practicas_bit/desencriptar/: main.cpp
desafio_1/practicas_bit/desmascarar/: main.cpp
desafio_1/practicas_bit/dezplazar_1/: main.cpp
desafio_1/practicas_bit/encriptar/: main.cpp
desafio_1/practicas_bit/enmascar_1/: main.cpp
desafio_1/practicas_bit/imagen_ejemplo/: CMakeLists.txt  main.cpp
desafio_1/practicas_bit/imagen_sinrojo/: main.cpp
desafio_1/practicas_bit/operaciones_bit/: CMakeLists.txt  main.cpp
desafio_1/practicas_bit/p2_imagen/: main.cpp
desafio_1/practicas_bit/p3_imagen/: main.cpp
desafio_1/practicas_bit/recuperar_1/: main.cpp
desafio_1/practicas_bit/recuperar_2/: main.cpp
desafio_1/practicas_bit/recuperar_3/: main.cpp
desafio_1/practicas_bit/sum_dezpla/: main.cpp
desafio_1/practicas_bit/ver_RGB/: main.cpp
desafio_1/practicas_bit/xor/: CMakeLists.txt  main.cpp
desafio_1/practicas_bit/xor_ejem/: main.cpp
desafio_1/practicas_bit/xor_rotaciones/: CMakeLists.txt  main.cpp
laboratorio_3/ejercicio1/: Nuevo documento de texto.txt  main.cpp
laboratorio_3/ejercicio2/ejercicio2/: main.cpp
laboratorio_4/Laboratorio_4/: enrutador.cpp  enrutador.h  main.cpp  red.cpp  red.h
